// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ImageWrapper generates commonjs source 1`] = `
"var AdaptiveImage = require(\\"../../node_modules/react-native-web-image-loader/lib/modules/AdaptiveImage\\").AdaptiveImage;

module.exports = new AdaptiveImage({
  uri: __webpack_public_path__ + \\"static/img@1x.png\\",
  width: 100,
  height: 100,
  sources: [
    {
      srcSet: __webpack_public_path__ + \\"static/img@1x.png\\" + \\" 1x\\" + \\",\\" +
        __webpack_public_path__ + \\"static/img@2x.png\\" + \\" 2x\\" + \\",\\" +
        __webpack_public_path__ + \\"static/img@3x.png\\" + \\" 3x\\",
      type: \\"image/png\\"
    }
  ]
});
"
`;

exports[`ImageWrapper generates es modules source 1`] = `
"import {AdaptiveImage} from \\"../../node_modules/react-native-web-image-loader/lib/modules/AdaptiveImage\\";

export default new AdaptiveImage({
  uri: __webpack_public_path__ + \\"static/img@1x.png\\",
  width: 100,
  height: 100,
  sources: [
    {
      srcSet: __webpack_public_path__ + \\"static/img@1x.png\\" + \\" 1x\\" + \\",\\" +
        __webpack_public_path__ + \\"static/img@2x.png\\" + \\" 2x\\" + \\",\\" +
        __webpack_public_path__ + \\"static/img@3x.png\\" + \\" 3x\\",
      type: \\"image/png\\"
    }
  ]
});
"
`;

exports[`ImageWrapper generates valid javascript 1`] = `
Node {
  "comments": Array [],
  "end": 741,
  "errors": Array [],
  "loc": SourceLocation {
    "end": Position {
      "column": 0,
      "line": 22,
    },
    "start": Position {
      "column": 0,
      "line": 1,
    },
  },
  "program": Node {
    "body": Array [
      Node {
        "end": 105,
        "loc": SourceLocation {
          "end": Position {
            "column": 105,
            "line": 1,
          },
          "start": Position {
            "column": 0,
            "line": 1,
          },
        },
        "source": Node {
          "end": 104,
          "extra": Object {
            "raw": "\\"../../node_modules/react-native-web-image-loader/lib/modules/AdaptiveImage\\"",
            "rawValue": "../../node_modules/react-native-web-image-loader/lib/modules/AdaptiveImage",
          },
          "loc": SourceLocation {
            "end": Position {
              "column": 104,
              "line": 1,
            },
            "start": Position {
              "column": 28,
              "line": 1,
            },
          },
          "start": 28,
          "type": "StringLiteral",
          "value": "../../node_modules/react-native-web-image-loader/lib/modules/AdaptiveImage",
        },
        "specifiers": Array [
          Node {
            "end": 21,
            "imported": Node {
              "end": 21,
              "loc": SourceLocation {
                "end": Position {
                  "column": 21,
                  "line": 1,
                },
                "identifierName": "AdaptiveImage",
                "start": Position {
                  "column": 8,
                  "line": 1,
                },
              },
              "name": "AdaptiveImage",
              "start": 8,
              "type": "Identifier",
            },
            "loc": SourceLocation {
              "end": Position {
                "column": 21,
                "line": 1,
              },
              "start": Position {
                "column": 8,
                "line": 1,
              },
            },
            "local": Node {
              "end": 21,
              "loc": SourceLocation {
                "end": Position {
                  "column": 21,
                  "line": 1,
                },
                "identifierName": "AdaptiveImage",
                "start": Position {
                  "column": 8,
                  "line": 1,
                },
              },
              "name": "AdaptiveImage",
              "start": 8,
              "type": "Identifier",
            },
            "start": 8,
            "type": "ImportSpecifier",
          },
        ],
        "start": 0,
        "type": "ImportDeclaration",
      },
      Node {
        "declaration": Node {
          "arguments": Array [
            Node {
              "end": 738,
              "loc": SourceLocation {
                "end": Position {
                  "column": 1,
                  "line": 21,
                },
                "start": Position {
                  "column": 33,
                  "line": 3,
                },
              },
              "properties": Array [
                Node {
                  "computed": false,
                  "end": 194,
                  "key": Node {
                    "end": 147,
                    "loc": SourceLocation {
                      "end": Position {
                        "column": 5,
                        "line": 4,
                      },
                      "identifierName": "uri",
                      "start": Position {
                        "column": 2,
                        "line": 4,
                      },
                    },
                    "name": "uri",
                    "start": 144,
                    "type": "Identifier",
                  },
                  "loc": SourceLocation {
                    "end": Position {
                      "column": 52,
                      "line": 4,
                    },
                    "start": Position {
                      "column": 2,
                      "line": 4,
                    },
                  },
                  "method": false,
                  "shorthand": false,
                  "start": 144,
                  "type": "ObjectProperty",
                  "value": Node {
                    "end": 194,
                    "left": Node {
                      "end": 172,
                      "loc": SourceLocation {
                        "end": Position {
                          "column": 30,
                          "line": 4,
                        },
                        "identifierName": "__webpack_public_path__",
                        "start": Position {
                          "column": 7,
                          "line": 4,
                        },
                      },
                      "name": "__webpack_public_path__",
                      "start": 149,
                      "type": "Identifier",
                    },
                    "loc": SourceLocation {
                      "end": Position {
                        "column": 52,
                        "line": 4,
                      },
                      "start": Position {
                        "column": 7,
                        "line": 4,
                      },
                    },
                    "operator": "+",
                    "right": Node {
                      "end": 194,
                      "extra": Object {
                        "raw": "\\"static/img@1x.png\\"",
                        "rawValue": "static/img@1x.png",
                      },
                      "loc": SourceLocation {
                        "end": Position {
                          "column": 52,
                          "line": 4,
                        },
                        "start": Position {
                          "column": 33,
                          "line": 4,
                        },
                      },
                      "start": 175,
                      "type": "StringLiteral",
                      "value": "static/img@1x.png",
                    },
                    "start": 149,
                    "type": "BinaryExpression",
                  },
                },
                Node {
                  "computed": false,
                  "end": 208,
                  "key": Node {
                    "end": 203,
                    "loc": SourceLocation {
                      "end": Position {
                        "column": 7,
                        "line": 5,
                      },
                      "identifierName": "width",
                      "start": Position {
                        "column": 2,
                        "line": 5,
                      },
                    },
                    "name": "width",
                    "start": 198,
                    "type": "Identifier",
                  },
                  "loc": SourceLocation {
                    "end": Position {
                      "column": 12,
                      "line": 5,
                    },
                    "start": Position {
                      "column": 2,
                      "line": 5,
                    },
                  },
                  "method": false,
                  "shorthand": false,
                  "start": 198,
                  "type": "ObjectProperty",
                  "value": Node {
                    "end": 208,
                    "extra": Object {
                      "raw": "100",
                      "rawValue": 100,
                    },
                    "loc": SourceLocation {
                      "end": Position {
                        "column": 12,
                        "line": 5,
                      },
                      "start": Position {
                        "column": 9,
                        "line": 5,
                      },
                    },
                    "start": 205,
                    "type": "NumericLiteral",
                    "value": 100,
                  },
                },
                Node {
                  "computed": false,
                  "end": 223,
                  "key": Node {
                    "end": 218,
                    "loc": SourceLocation {
                      "end": Position {
                        "column": 8,
                        "line": 6,
                      },
                      "identifierName": "height",
                      "start": Position {
                        "column": 2,
                        "line": 6,
                      },
                    },
                    "name": "height",
                    "start": 212,
                    "type": "Identifier",
                  },
                  "loc": SourceLocation {
                    "end": Position {
                      "column": 13,
                      "line": 6,
                    },
                    "start": Position {
                      "column": 2,
                      "line": 6,
                    },
                  },
                  "method": false,
                  "shorthand": false,
                  "start": 212,
                  "type": "ObjectProperty",
                  "value": Node {
                    "end": 223,
                    "extra": Object {
                      "raw": "100",
                      "rawValue": 100,
                    },
                    "loc": SourceLocation {
                      "end": Position {
                        "column": 13,
                        "line": 6,
                      },
                      "start": Position {
                        "column": 10,
                        "line": 6,
                      },
                    },
                    "start": 220,
                    "type": "NumericLiteral",
                    "value": 100,
                  },
                },
                Node {
                  "computed": false,
                  "end": 736,
                  "key": Node {
                    "end": 234,
                    "loc": SourceLocation {
                      "end": Position {
                        "column": 9,
                        "line": 7,
                      },
                      "identifierName": "sources",
                      "start": Position {
                        "column": 2,
                        "line": 7,
                      },
                    },
                    "name": "sources",
                    "start": 227,
                    "type": "Identifier",
                  },
                  "loc": SourceLocation {
                    "end": Position {
                      "column": 3,
                      "line": 20,
                    },
                    "start": Position {
                      "column": 2,
                      "line": 7,
                    },
                  },
                  "method": false,
                  "shorthand": false,
                  "start": 227,
                  "type": "ObjectProperty",
                  "value": Node {
                    "elements": Array [
                      Node {
                        "end": 486,
                        "loc": SourceLocation {
                          "end": Position {
                            "column": 5,
                            "line": 13,
                          },
                          "start": Position {
                            "column": 4,
                            "line": 8,
                          },
                        },
                        "properties": Array [
                          Node {
                            "computed": false,
                            "end": 454,
                            "key": Node {
                              "end": 256,
                              "loc": SourceLocation {
                                "end": Position {
                                  "column": 12,
                                  "line": 9,
                                },
                                "identifierName": "srcSet",
                                "start": Position {
                                  "column": 6,
                                  "line": 9,
                                },
                              },
                              "name": "srcSet",
                              "start": 250,
                              "type": "Identifier",
                            },
                            "loc": SourceLocation {
                              "end": Position {
                                "column": 62,
                                "line": 11,
                              },
                              "start": Position {
                                "column": 6,
                                "line": 9,
                              },
                            },
                            "method": false,
                            "shorthand": false,
                            "start": 250,
                            "type": "ObjectProperty",
                            "value": Node {
                              "end": 454,
                              "left": Node {
                                "end": 446,
                                "left": Node {
                                  "end": 423,
                                  "left": Node {
                                    "end": 389,
                                    "left": Node {
                                      "end": 383,
                                      "left": Node {
                                        "end": 375,
                                        "left": Node {
                                          "end": 352,
                                          "left": Node {
                                            "end": 318,
                                            "left": Node {
                                              "end": 312,
                                              "left": Node {
                                                "end": 304,
                                                "left": Node {
                                                  "end": 281,
                                                  "loc": SourceLocation {
                                                    "end": Position {
                                                      "column": 37,
                                                      "line": 9,
                                                    },
                                                    "identifierName": "__webpack_public_path__",
                                                    "start": Position {
                                                      "column": 14,
                                                      "line": 9,
                                                    },
                                                  },
                                                  "name": "__webpack_public_path__",
                                                  "start": 258,
                                                  "type": "Identifier",
                                                },
                                                "loc": SourceLocation {
                                                  "end": Position {
                                                    "column": 60,
                                                    "line": 9,
                                                  },
                                                  "start": Position {
                                                    "column": 14,
                                                    "line": 9,
                                                  },
                                                },
                                                "operator": "+",
                                                "right": Node {
                                                  "end": 304,
                                                  "extra": Object {
                                                    "raw": "\\"static/img@1x.webp\\"",
                                                    "rawValue": "static/img@1x.webp",
                                                  },
                                                  "loc": SourceLocation {
                                                    "end": Position {
                                                      "column": 60,
                                                      "line": 9,
                                                    },
                                                    "start": Position {
                                                      "column": 40,
                                                      "line": 9,
                                                    },
                                                  },
                                                  "start": 284,
                                                  "type": "StringLiteral",
                                                  "value": "static/img@1x.webp",
                                                },
                                                "start": 258,
                                                "type": "BinaryExpression",
                                              },
                                              "loc": SourceLocation {
                                                "end": Position {
                                                  "column": 68,
                                                  "line": 9,
                                                },
                                                "start": Position {
                                                  "column": 14,
                                                  "line": 9,
                                                },
                                              },
                                              "operator": "+",
                                              "right": Node {
                                                "end": 312,
                                                "extra": Object {
                                                  "raw": "\\" 1x\\"",
                                                  "rawValue": " 1x",
                                                },
                                                "loc": SourceLocation {
                                                  "end": Position {
                                                    "column": 68,
                                                    "line": 9,
                                                  },
                                                  "start": Position {
                                                    "column": 63,
                                                    "line": 9,
                                                  },
                                                },
                                                "start": 307,
                                                "type": "StringLiteral",
                                                "value": " 1x",
                                              },
                                              "start": 258,
                                              "type": "BinaryExpression",
                                            },
                                            "loc": SourceLocation {
                                              "end": Position {
                                                "column": 74,
                                                "line": 9,
                                              },
                                              "start": Position {
                                                "column": 14,
                                                "line": 9,
                                              },
                                            },
                                            "operator": "+",
                                            "right": Node {
                                              "end": 318,
                                              "extra": Object {
                                                "raw": "\\",\\"",
                                                "rawValue": ",",
                                              },
                                              "loc": SourceLocation {
                                                "end": Position {
                                                  "column": 74,
                                                  "line": 9,
                                                },
                                                "start": Position {
                                                  "column": 71,
                                                  "line": 9,
                                                },
                                              },
                                              "start": 315,
                                              "type": "StringLiteral",
                                              "value": ",",
                                            },
                                            "start": 258,
                                            "type": "BinaryExpression",
                                          },
                                          "loc": SourceLocation {
                                            "end": Position {
                                              "column": 31,
                                              "line": 10,
                                            },
                                            "start": Position {
                                              "column": 14,
                                              "line": 9,
                                            },
                                          },
                                          "operator": "+",
                                          "right": Node {
                                            "end": 352,
                                            "loc": SourceLocation {
                                              "end": Position {
                                                "column": 31,
                                                "line": 10,
                                              },
                                              "identifierName": "__webpack_public_path__",
                                              "start": Position {
                                                "column": 8,
                                                "line": 10,
                                              },
                                            },
                                            "name": "__webpack_public_path__",
                                            "start": 329,
                                            "type": "Identifier",
                                          },
                                          "start": 258,
                                          "type": "BinaryExpression",
                                        },
                                        "loc": SourceLocation {
                                          "end": Position {
                                            "column": 54,
                                            "line": 10,
                                          },
                                          "start": Position {
                                            "column": 14,
                                            "line": 9,
                                          },
                                        },
                                        "operator": "+",
                                        "right": Node {
                                          "end": 375,
                                          "extra": Object {
                                            "raw": "\\"static/img@2x.webp\\"",
                                            "rawValue": "static/img@2x.webp",
                                          },
                                          "loc": SourceLocation {
                                            "end": Position {
                                              "column": 54,
                                              "line": 10,
                                            },
                                            "start": Position {
                                              "column": 34,
                                              "line": 10,
                                            },
                                          },
                                          "start": 355,
                                          "type": "StringLiteral",
                                          "value": "static/img@2x.webp",
                                        },
                                        "start": 258,
                                        "type": "BinaryExpression",
                                      },
                                      "loc": SourceLocation {
                                        "end": Position {
                                          "column": 62,
                                          "line": 10,
                                        },
                                        "start": Position {
                                          "column": 14,
                                          "line": 9,
                                        },
                                      },
                                      "operator": "+",
                                      "right": Node {
                                        "end": 383,
                                        "extra": Object {
                                          "raw": "\\" 2x\\"",
                                          "rawValue": " 2x",
                                        },
                                        "loc": SourceLocation {
                                          "end": Position {
                                            "column": 62,
                                            "line": 10,
                                          },
                                          "start": Position {
                                            "column": 57,
                                            "line": 10,
                                          },
                                        },
                                        "start": 378,
                                        "type": "StringLiteral",
                                        "value": " 2x",
                                      },
                                      "start": 258,
                                      "type": "BinaryExpression",
                                    },
                                    "loc": SourceLocation {
                                      "end": Position {
                                        "column": 68,
                                        "line": 10,
                                      },
                                      "start": Position {
                                        "column": 14,
                                        "line": 9,
                                      },
                                    },
                                    "operator": "+",
                                    "right": Node {
                                      "end": 389,
                                      "extra": Object {
                                        "raw": "\\",\\"",
                                        "rawValue": ",",
                                      },
                                      "loc": SourceLocation {
                                        "end": Position {
                                          "column": 68,
                                          "line": 10,
                                        },
                                        "start": Position {
                                          "column": 65,
                                          "line": 10,
                                        },
                                      },
                                      "start": 386,
                                      "type": "StringLiteral",
                                      "value": ",",
                                    },
                                    "start": 258,
                                    "type": "BinaryExpression",
                                  },
                                  "loc": SourceLocation {
                                    "end": Position {
                                      "column": 31,
                                      "line": 11,
                                    },
                                    "start": Position {
                                      "column": 14,
                                      "line": 9,
                                    },
                                  },
                                  "operator": "+",
                                  "right": Node {
                                    "end": 423,
                                    "loc": SourceLocation {
                                      "end": Position {
                                        "column": 31,
                                        "line": 11,
                                      },
                                      "identifierName": "__webpack_public_path__",
                                      "start": Position {
                                        "column": 8,
                                        "line": 11,
                                      },
                                    },
                                    "name": "__webpack_public_path__",
                                    "start": 400,
                                    "type": "Identifier",
                                  },
                                  "start": 258,
                                  "type": "BinaryExpression",
                                },
                                "loc": SourceLocation {
                                  "end": Position {
                                    "column": 54,
                                    "line": 11,
                                  },
                                  "start": Position {
                                    "column": 14,
                                    "line": 9,
                                  },
                                },
                                "operator": "+",
                                "right": Node {
                                  "end": 446,
                                  "extra": Object {
                                    "raw": "\\"static/img@3x.webp\\"",
                                    "rawValue": "static/img@3x.webp",
                                  },
                                  "loc": SourceLocation {
                                    "end": Position {
                                      "column": 54,
                                      "line": 11,
                                    },
                                    "start": Position {
                                      "column": 34,
                                      "line": 11,
                                    },
                                  },
                                  "start": 426,
                                  "type": "StringLiteral",
                                  "value": "static/img@3x.webp",
                                },
                                "start": 258,
                                "type": "BinaryExpression",
                              },
                              "loc": SourceLocation {
                                "end": Position {
                                  "column": 62,
                                  "line": 11,
                                },
                                "start": Position {
                                  "column": 14,
                                  "line": 9,
                                },
                              },
                              "operator": "+",
                              "right": Node {
                                "end": 454,
                                "extra": Object {
                                  "raw": "\\" 3x\\"",
                                  "rawValue": " 3x",
                                },
                                "loc": SourceLocation {
                                  "end": Position {
                                    "column": 62,
                                    "line": 11,
                                  },
                                  "start": Position {
                                    "column": 57,
                                    "line": 11,
                                  },
                                },
                                "start": 449,
                                "type": "StringLiteral",
                                "value": " 3x",
                              },
                              "start": 258,
                              "type": "BinaryExpression",
                            },
                          },
                          Node {
                            "computed": false,
                            "end": 480,
                            "key": Node {
                              "end": 466,
                              "loc": SourceLocation {
                                "end": Position {
                                  "column": 10,
                                  "line": 12,
                                },
                                "identifierName": "type",
                                "start": Position {
                                  "column": 6,
                                  "line": 12,
                                },
                              },
                              "name": "type",
                              "start": 462,
                              "type": "Identifier",
                            },
                            "loc": SourceLocation {
                              "end": Position {
                                "column": 24,
                                "line": 12,
                              },
                              "start": Position {
                                "column": 6,
                                "line": 12,
                              },
                            },
                            "method": false,
                            "shorthand": false,
                            "start": 462,
                            "type": "ObjectProperty",
                            "value": Node {
                              "end": 480,
                              "extra": Object {
                                "raw": "\\"image/webp\\"",
                                "rawValue": "image/webp",
                              },
                              "loc": SourceLocation {
                                "end": Position {
                                  "column": 24,
                                  "line": 12,
                                },
                                "start": Position {
                                  "column": 12,
                                  "line": 12,
                                },
                              },
                              "start": 468,
                              "type": "StringLiteral",
                              "value": "image/webp",
                            },
                          },
                        ],
                        "start": 242,
                        "type": "ObjectExpression",
                      },
                      Node {
                        "end": 732,
                        "loc": SourceLocation {
                          "end": Position {
                            "column": 5,
                            "line": 19,
                          },
                          "start": Position {
                            "column": 4,
                            "line": 14,
                          },
                        },
                        "properties": Array [
                          Node {
                            "computed": false,
                            "end": 701,
                            "key": Node {
                              "end": 506,
                              "loc": SourceLocation {
                                "end": Position {
                                  "column": 12,
                                  "line": 15,
                                },
                                "identifierName": "srcSet",
                                "start": Position {
                                  "column": 6,
                                  "line": 15,
                                },
                              },
                              "name": "srcSet",
                              "start": 500,
                              "type": "Identifier",
                            },
                            "loc": SourceLocation {
                              "end": Position {
                                "column": 61,
                                "line": 17,
                              },
                              "start": Position {
                                "column": 6,
                                "line": 15,
                              },
                            },
                            "method": false,
                            "shorthand": false,
                            "start": 500,
                            "type": "ObjectProperty",
                            "value": Node {
                              "end": 701,
                              "left": Node {
                                "end": 693,
                                "left": Node {
                                  "end": 671,
                                  "left": Node {
                                    "end": 637,
                                    "left": Node {
                                      "end": 631,
                                      "left": Node {
                                        "end": 623,
                                        "left": Node {
                                          "end": 601,
                                          "left": Node {
                                            "end": 567,
                                            "left": Node {
                                              "end": 561,
                                              "left": Node {
                                                "end": 553,
                                                "left": Node {
                                                  "end": 531,
                                                  "loc": SourceLocation {
                                                    "end": Position {
                                                      "column": 37,
                                                      "line": 15,
                                                    },
                                                    "identifierName": "__webpack_public_path__",
                                                    "start": Position {
                                                      "column": 14,
                                                      "line": 15,
                                                    },
                                                  },
                                                  "name": "__webpack_public_path__",
                                                  "start": 508,
                                                  "type": "Identifier",
                                                },
                                                "loc": SourceLocation {
                                                  "end": Position {
                                                    "column": 59,
                                                    "line": 15,
                                                  },
                                                  "start": Position {
                                                    "column": 14,
                                                    "line": 15,
                                                  },
                                                },
                                                "operator": "+",
                                                "right": Node {
                                                  "end": 553,
                                                  "extra": Object {
                                                    "raw": "\\"static/img@1x.png\\"",
                                                    "rawValue": "static/img@1x.png",
                                                  },
                                                  "loc": SourceLocation {
                                                    "end": Position {
                                                      "column": 59,
                                                      "line": 15,
                                                    },
                                                    "start": Position {
                                                      "column": 40,
                                                      "line": 15,
                                                    },
                                                  },
                                                  "start": 534,
                                                  "type": "StringLiteral",
                                                  "value": "static/img@1x.png",
                                                },
                                                "start": 508,
                                                "type": "BinaryExpression",
                                              },
                                              "loc": SourceLocation {
                                                "end": Position {
                                                  "column": 67,
                                                  "line": 15,
                                                },
                                                "start": Position {
                                                  "column": 14,
                                                  "line": 15,
                                                },
                                              },
                                              "operator": "+",
                                              "right": Node {
                                                "end": 561,
                                                "extra": Object {
                                                  "raw": "\\" 1x\\"",
                                                  "rawValue": " 1x",
                                                },
                                                "loc": SourceLocation {
                                                  "end": Position {
                                                    "column": 67,
                                                    "line": 15,
                                                  },
                                                  "start": Position {
                                                    "column": 62,
                                                    "line": 15,
                                                  },
                                                },
                                                "start": 556,
                                                "type": "StringLiteral",
                                                "value": " 1x",
                                              },
                                              "start": 508,
                                              "type": "BinaryExpression",
                                            },
                                            "loc": SourceLocation {
                                              "end": Position {
                                                "column": 73,
                                                "line": 15,
                                              },
                                              "start": Position {
                                                "column": 14,
                                                "line": 15,
                                              },
                                            },
                                            "operator": "+",
                                            "right": Node {
                                              "end": 567,
                                              "extra": Object {
                                                "raw": "\\",\\"",
                                                "rawValue": ",",
                                              },
                                              "loc": SourceLocation {
                                                "end": Position {
                                                  "column": 73,
                                                  "line": 15,
                                                },
                                                "start": Position {
                                                  "column": 70,
                                                  "line": 15,
                                                },
                                              },
                                              "start": 564,
                                              "type": "StringLiteral",
                                              "value": ",",
                                            },
                                            "start": 508,
                                            "type": "BinaryExpression",
                                          },
                                          "loc": SourceLocation {
                                            "end": Position {
                                              "column": 31,
                                              "line": 16,
                                            },
                                            "start": Position {
                                              "column": 14,
                                              "line": 15,
                                            },
                                          },
                                          "operator": "+",
                                          "right": Node {
                                            "end": 601,
                                            "loc": SourceLocation {
                                              "end": Position {
                                                "column": 31,
                                                "line": 16,
                                              },
                                              "identifierName": "__webpack_public_path__",
                                              "start": Position {
                                                "column": 8,
                                                "line": 16,
                                              },
                                            },
                                            "name": "__webpack_public_path__",
                                            "start": 578,
                                            "type": "Identifier",
                                          },
                                          "start": 508,
                                          "type": "BinaryExpression",
                                        },
                                        "loc": SourceLocation {
                                          "end": Position {
                                            "column": 53,
                                            "line": 16,
                                          },
                                          "start": Position {
                                            "column": 14,
                                            "line": 15,
                                          },
                                        },
                                        "operator": "+",
                                        "right": Node {
                                          "end": 623,
                                          "extra": Object {
                                            "raw": "\\"static/img@2x.png\\"",
                                            "rawValue": "static/img@2x.png",
                                          },
                                          "loc": SourceLocation {
                                            "end": Position {
                                              "column": 53,
                                              "line": 16,
                                            },
                                            "start": Position {
                                              "column": 34,
                                              "line": 16,
                                            },
                                          },
                                          "start": 604,
                                          "type": "StringLiteral",
                                          "value": "static/img@2x.png",
                                        },
                                        "start": 508,
                                        "type": "BinaryExpression",
                                      },
                                      "loc": SourceLocation {
                                        "end": Position {
                                          "column": 61,
                                          "line": 16,
                                        },
                                        "start": Position {
                                          "column": 14,
                                          "line": 15,
                                        },
                                      },
                                      "operator": "+",
                                      "right": Node {
                                        "end": 631,
                                        "extra": Object {
                                          "raw": "\\" 2x\\"",
                                          "rawValue": " 2x",
                                        },
                                        "loc": SourceLocation {
                                          "end": Position {
                                            "column": 61,
                                            "line": 16,
                                          },
                                          "start": Position {
                                            "column": 56,
                                            "line": 16,
                                          },
                                        },
                                        "start": 626,
                                        "type": "StringLiteral",
                                        "value": " 2x",
                                      },
                                      "start": 508,
                                      "type": "BinaryExpression",
                                    },
                                    "loc": SourceLocation {
                                      "end": Position {
                                        "column": 67,
                                        "line": 16,
                                      },
                                      "start": Position {
                                        "column": 14,
                                        "line": 15,
                                      },
                                    },
                                    "operator": "+",
                                    "right": Node {
                                      "end": 637,
                                      "extra": Object {
                                        "raw": "\\",\\"",
                                        "rawValue": ",",
                                      },
                                      "loc": SourceLocation {
                                        "end": Position {
                                          "column": 67,
                                          "line": 16,
                                        },
                                        "start": Position {
                                          "column": 64,
                                          "line": 16,
                                        },
                                      },
                                      "start": 634,
                                      "type": "StringLiteral",
                                      "value": ",",
                                    },
                                    "start": 508,
                                    "type": "BinaryExpression",
                                  },
                                  "loc": SourceLocation {
                                    "end": Position {
                                      "column": 31,
                                      "line": 17,
                                    },
                                    "start": Position {
                                      "column": 14,
                                      "line": 15,
                                    },
                                  },
                                  "operator": "+",
                                  "right": Node {
                                    "end": 671,
                                    "loc": SourceLocation {
                                      "end": Position {
                                        "column": 31,
                                        "line": 17,
                                      },
                                      "identifierName": "__webpack_public_path__",
                                      "start": Position {
                                        "column": 8,
                                        "line": 17,
                                      },
                                    },
                                    "name": "__webpack_public_path__",
                                    "start": 648,
                                    "type": "Identifier",
                                  },
                                  "start": 508,
                                  "type": "BinaryExpression",
                                },
                                "loc": SourceLocation {
                                  "end": Position {
                                    "column": 53,
                                    "line": 17,
                                  },
                                  "start": Position {
                                    "column": 14,
                                    "line": 15,
                                  },
                                },
                                "operator": "+",
                                "right": Node {
                                  "end": 693,
                                  "extra": Object {
                                    "raw": "\\"static/img@3x.png\\"",
                                    "rawValue": "static/img@3x.png",
                                  },
                                  "loc": SourceLocation {
                                    "end": Position {
                                      "column": 53,
                                      "line": 17,
                                    },
                                    "start": Position {
                                      "column": 34,
                                      "line": 17,
                                    },
                                  },
                                  "start": 674,
                                  "type": "StringLiteral",
                                  "value": "static/img@3x.png",
                                },
                                "start": 508,
                                "type": "BinaryExpression",
                              },
                              "loc": SourceLocation {
                                "end": Position {
                                  "column": 61,
                                  "line": 17,
                                },
                                "start": Position {
                                  "column": 14,
                                  "line": 15,
                                },
                              },
                              "operator": "+",
                              "right": Node {
                                "end": 701,
                                "extra": Object {
                                  "raw": "\\" 3x\\"",
                                  "rawValue": " 3x",
                                },
                                "loc": SourceLocation {
                                  "end": Position {
                                    "column": 61,
                                    "line": 17,
                                  },
                                  "start": Position {
                                    "column": 56,
                                    "line": 17,
                                  },
                                },
                                "start": 696,
                                "type": "StringLiteral",
                                "value": " 3x",
                              },
                              "start": 508,
                              "type": "BinaryExpression",
                            },
                          },
                          Node {
                            "computed": false,
                            "end": 726,
                            "key": Node {
                              "end": 713,
                              "loc": SourceLocation {
                                "end": Position {
                                  "column": 10,
                                  "line": 18,
                                },
                                "identifierName": "type",
                                "start": Position {
                                  "column": 6,
                                  "line": 18,
                                },
                              },
                              "name": "type",
                              "start": 709,
                              "type": "Identifier",
                            },
                            "loc": SourceLocation {
                              "end": Position {
                                "column": 23,
                                "line": 18,
                              },
                              "start": Position {
                                "column": 6,
                                "line": 18,
                              },
                            },
                            "method": false,
                            "shorthand": false,
                            "start": 709,
                            "type": "ObjectProperty",
                            "value": Node {
                              "end": 726,
                              "extra": Object {
                                "raw": "\\"image/png\\"",
                                "rawValue": "image/png",
                              },
                              "loc": SourceLocation {
                                "end": Position {
                                  "column": 23,
                                  "line": 18,
                                },
                                "start": Position {
                                  "column": 12,
                                  "line": 18,
                                },
                              },
                              "start": 715,
                              "type": "StringLiteral",
                              "value": "image/png",
                            },
                          },
                        ],
                        "start": 492,
                        "type": "ObjectExpression",
                      },
                    ],
                    "end": 736,
                    "loc": SourceLocation {
                      "end": Position {
                        "column": 3,
                        "line": 20,
                      },
                      "start": Position {
                        "column": 11,
                        "line": 7,
                      },
                    },
                    "start": 236,
                    "type": "ArrayExpression",
                  },
                },
              ],
              "start": 140,
              "type": "ObjectExpression",
            },
          ],
          "callee": Node {
            "end": 139,
            "loc": SourceLocation {
              "end": Position {
                "column": 32,
                "line": 3,
              },
              "identifierName": "AdaptiveImage",
              "start": Position {
                "column": 19,
                "line": 3,
              },
            },
            "name": "AdaptiveImage",
            "start": 126,
            "type": "Identifier",
          },
          "end": 739,
          "loc": SourceLocation {
            "end": Position {
              "column": 2,
              "line": 21,
            },
            "start": Position {
              "column": 15,
              "line": 3,
            },
          },
          "start": 122,
          "type": "NewExpression",
        },
        "end": 740,
        "loc": SourceLocation {
          "end": Position {
            "column": 3,
            "line": 21,
          },
          "start": Position {
            "column": 0,
            "line": 3,
          },
        },
        "start": 107,
        "type": "ExportDefaultDeclaration",
      },
    ],
    "directives": Array [],
    "end": 741,
    "interpreter": null,
    "loc": SourceLocation {
      "end": Position {
        "column": 0,
        "line": 22,
      },
      "start": Position {
        "column": 0,
        "line": 1,
      },
    },
    "sourceType": "module",
    "start": 0,
    "type": "Program",
  },
  "start": 0,
  "type": "File",
}
`;

exports[`ImageWrapper handles multiple sources 1`] = `
"import {AdaptiveImage} from \\"../../node_modules/react-native-web-image-loader/lib/modules/AdaptiveImage\\";

export default new AdaptiveImage({
  uri: __webpack_public_path__ + \\"static/img@1x.png\\",
  width: 100,
  height: 100,
  sources: [
    {
      srcSet: __webpack_public_path__ + \\"static/img@1x.webp\\" + \\" 1x\\" + \\",\\" +
        __webpack_public_path__ + \\"static/img@2x.webp\\" + \\" 2x\\" + \\",\\" +
        __webpack_public_path__ + \\"static/img@3x.webp\\" + \\" 3x\\",
      type: \\"image/webp\\"
    },
    {
      srcSet: __webpack_public_path__ + \\"static/img@1x.png\\" + \\" 1x\\" + \\",\\" +
        __webpack_public_path__ + \\"static/img@2x.png\\" + \\" 2x\\" + \\",\\" +
        __webpack_public_path__ + \\"static/img@3x.png\\" + \\" 3x\\",
      type: \\"image/png\\"
    }
  ]
});
"
`;
